src/components/Work.scss
div.work-card {
  display: flex;
  margin-top:2%;
  padding: 0 2%;
  background-color: #111;
  justify-content: baseline;
  flex-direction: column;
  flex-basis: 40%;
  min-width: 40%;
  animation: worksIn 0.6s ease-out 0s 1 normal;
  transform-origin: top;
}

h3.work-title {
  display: flex;
}

p.work-text {
  display: flex;
  word-wrap: normal;
}

@keyframes worksIn {
  0% {
    opacity: 0;
    transform: scaleY(0);
  }
  100% {
    opacity: 1;
    transform: scaleY(100%);
  }
}

